// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`InteractiveControls Component renders correctly in abnormal state 1`] = `
<DocumentFragment>
  <div
    class="flex items-center gap-4 bg-[rgba(255,255,255,0.03)] backdrop-blur-[12px] border border-[rgba(255,255,255,0.08)] rounded-[var(--radius-lg)] p-4"
  >
    <div
      class="flex-1"
    >
      <h2
        class="text-sm font-semibold text-[var(--color-on-surface)]"
      >
        System Simulator
      </h2>
      <p
        class="text-xs text-[var(--color-on-surface-variant)] mt-1"
      >
        Trigger an artificial anomaly state to test dashboard responsiveness.
      </p>
    </div>
    <button
      class="flex items-center gap-2 px-6 py-2.5 rounded-[var(--radius-md)] text-sm font-bold tracking-wide transition-all duration-300 bg-[rgba(255,51,102,0.2)] text-[#ff3366] border border-[#ff3366] shadow-[0_0_15px_rgba(255,51,102,0.4)]"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-octagon-alert w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 16h.01"
        />
        <path
          d="M12 8v4"
        />
        <path
          d="M15.312 2a2 2 0 0 1 1.414.586l4.688 4.688A2 2 0 0 1 22 8.688v6.624a2 2 0 0 1-.586 1.414l-4.688 4.688a2 2 0 0 1-1.414.586H8.688a2 2 0 0 1-1.414-.586l-4.688-4.688A2 2 0 0 1 2 15.312V8.688a2 2 0 0 1 .586-1.414l4.688-4.688A2 2 0 0 1 8.688 2z"
        />
      </svg>
      RESTORE NORMAL
    </button>
  </div>
</DocumentFragment>
`;

exports[`InteractiveControls Component renders correctly in normal state 1`] = `
<DocumentFragment>
  <div
    class="flex items-center gap-4 bg-[rgba(255,255,255,0.03)] backdrop-blur-[12px] border border-[rgba(255,255,255,0.08)] rounded-[var(--radius-lg)] p-4"
  >
    <div
      class="flex-1"
    >
      <h2
        class="text-sm font-semibold text-[var(--color-on-surface)]"
      >
        System Simulator
      </h2>
      <p
        class="text-xs text-[var(--color-on-surface-variant)] mt-1"
      >
        Trigger an artificial anomaly state to test dashboard responsiveness.
      </p>
    </div>
    <button
      class="flex items-center gap-2 px-6 py-2.5 rounded-[var(--radius-md)] text-sm font-bold tracking-wide transition-all duration-300 bg-[var(--color-surface-bright)] text-[var(--color-on-surface)] border border-[var(--color-outline-variant)] hover:bg-[rgba(255,255,255,0.1)]"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-octagon-alert w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 16h.01"
        />
        <path
          d="M12 8v4"
        />
        <path
          d="M15.312 2a2 2 0 0 1 1.414.586l4.688 4.688A2 2 0 0 1 22 8.688v6.624a2 2 0 0 1-.586 1.414l-4.688 4.688a2 2 0 0 1-1.414.586H8.688a2 2 0 0 1-1.414-.586l-4.688-4.688A2 2 0 0 1 2 15.312V8.688a2 2 0 0 1 .586-1.414l4.688-4.688A2 2 0 0 1 8.688 2z"
        />
      </svg>
      TRIGGER ABNORMAL
    </button>
  </div>
</DocumentFragment>
`;
